// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`case context tree > reactive value > ctx tree 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "B",
            },
          ],
          "name": "1",
        },
      ],
      "name": "VCase",
    },
  ],
  "name": "App",
}
`;

exports[`case context tree > reactive value > html 1`] = `
<div
  id="App"
>
  <div
    class="B"
  >
    <span>
      b
    </span>
    1
  </div>
  <!--Case-->
</div>
`;

exports[`case context tree > should unmount > html 1`] = `
<div
  id="App"
>
  <div>
    <!--Case-->
  </div>
</div>
`;

exports[`case context tree > static value > ctx tree 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "name": "A",
            },
          ],
          "name": "0",
        },
      ],
      "name": "VCase",
    },
  ],
  "name": "App",
}
`;

exports[`case context tree > static value > html 1`] = `
<div
  id="App"
>
  <div
    class="A"
  >
    <span>
      a
    </span>
    0
  </div>
  <!--Case-->
</div>
`;
